# Hopki

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml
analysis-tab/: index.html
assets/stylesheets/: hopki.css  pdf.css
command-line/: index.html
curve-cleanup-tab/: index.html
docs/: analysis-tab.md  command-line.md  curve-cleanup-tab.md  explore-tab.md  figures-tab.md  getting-started.md  index.md  legacy-overview.html  parameters.md
docs/assets/javascripts/: theme-toggle.js
examples/: hopki.toml
explore-tab/: index.html
figures-tab/: index.html
getting-started/: index.html
hopki/: __init__.py  config.py  dispersion.py  figcorr.py  figio.py  figmpl.py  geometry.py  matlab_io.py  trans2nic.py  twobar.py  wft_to_csv.py
hopki/gui/: Hopki.icns  __init__.py  app.py  cleanup.py  controller.py  explore.py  figures.py  resources.py  theme.py  theme_seuss.css
packaging/: build.py  build_macos.sh  hopki_app.py  make_ico.py  make_icons.sh
parameters/: index.html
search/: search_index.json
tests/Converter/: WAVE0003.WFT  WAVE0004.WFT  test_wft_to_csv.py
tests/Converter/gold/: WAVE0003.FLT  WAVE0004.FLT
tests/analysis/: DAMP_F  WAVE0030.FLT  WAVE0031.FLT  incid.exp  incid.spec  test_geometry.py  test_roundtrip.py  test_twobar.py
tests/analysis/gold/: e_dot  f  f_in  f_out  inc_corr  inc_puls  incid.inc  ref_corr  ref_puls  s_e_eng  s_e_true  s_e_true_corr  tim_cut  tpp  tra_corr  tra_puls  trans.tra  u_in  u_out  v_in  v_in2  v_out  v_striker
tests/figcorr/: test_figcorr.py
tests/figures/: test_figio.py  test_figmpl.py  test_figures_panel.py
tests/gui/: test_controller.py  test_resources.py
