[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopki"
version = "0.1.0"
description = "Split Hopkinson bar analysis — Python port of the legacy MATLAB twobar_g suite"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Shmuel Osovski" }]
keywords = [
	"hopkinson-bar",
	"split-hopkinson-bar",
	"materials-testing",
	"dispersion-correction",
	"stress-strain",
	"scientific-computing",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Physics",
	"Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
	"numpy",
	"scipy",
	"matplotlib",
]

[project.urls]
Repository = "https://github.com/CEmM2/Hopki"
Issues = "https://github.com/CEmM2/Hopki/issues"
Documentation = "https://github.com/CEmM2/Hopki"

[project.optional-dependencies]
# Desktop GUI deps are optional so the core/CLI install stays light.
# Install with: uv sync --extra gui
gui = [
	"pyside6",
	"pyqtgraph",
	"scienceplots",
]
# Binary packaging (Nuitka). Install with: uv sync --extra gui --extra packaging
packaging = [
	"nuitka",
	"zstandard",
]
# Declared but not yet wired in — staged for future plotting work. Kept out of the core
# install so the CLI/source install stays light. Install with: uv sync --extra plotting
plotting = [
	"plotly",
	"seaborn",
	"pandas",
]

[project.scripts]
wft-to-csv = "hopki.wft_to_csv:main"
twobar-analyze = "hopki.twobar:main"
figcorr = "hopki.figcorr:main"
hopki-gui = "hopki.gui.app:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["hopki", "hopki.gui"]
